--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   sqflite: ^2.3.3+1
   path_provider: ^2.1.4
   path: ^1.9.0
+  shared_preferences: ^2.0.6
   # google_fonts: ^3.0.1
 
 dev_dependencies:
