--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   path_provider: ^2.1.4
   path: ^1.9.0
   shared_preferences: ^2.0.6
+  flutter_staggered_grid_view: ^0.7.0
+
   # google_fonts: ^3.0.1
 
 dev_dependencies:
