--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   path: ^1.9.0
   shared_preferences: ^2.0.6
   flutter_staggered_grid_view: ^0.7.0
+  intl: ^0.19.0
 
   # google_fonts: ^3.0.1
 
