--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - assets/images/g.png
     - assets/images/f.png
     - assets/images/apple.png
+    - assets/images/someone.jpg
     - assets/images/d.png
 
   # To add assets to your application, add an assets section, like this:
