added elegant fonts to all notes views and made notes' height max 270 and ofc can be less and mase there insisdes scrollable

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -102,6 +102,11 @@ flutter:
       fonts:
         - asset: assets/fonts/Montserrat-VariableFont_wght.ttf
           weight: 700
+
+    - family: Raleway
+      fonts:
+        - asset: assets/fonts/Raleway-VariableFont_wght.ttf
+          # weight: 700
           # style: italic
   #   - family: Trajan Pro
   #     fonts:
