handeled how no notes placeholder should look like in dark mode and light mode

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,8 @@ flutter:
     - assets/images/d.png
     - assets/images/no_notes.png
     - assets/images/add_arrow.png
+    - assets/images/no_notes_dark.png
+    - assets/images/add_arrow_dark.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
