--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences: ^2.0.6
   flutter_staggered_grid_view: ^0.7.0
   intl: ^0.19.0
+  share_plus: ^10.0.0
 
   # google_fonts: ^3.0.1
 
