--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   intl: ^0.19.0
   share_plus: ^10.0.0
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
 
   # google_fonts: ^3.0.1
 
