--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,8 @@ dependencies:
   intl: ^0.19.0
   share_plus: ^10.0.0
   bloc: ^8.1.4
-  flutter_bloc: ^8.1.6
+  flutter_bloc: ^8.1.4
+  # equatable: ^2.0.5
 
   # google_fonts: ^3.0.1
 
