--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   share_plus: ^10.0.0
   bloc: ^8.1.4
   flutter_bloc: ^8.1.4
+  flutter_launcher_icons: ^0.13.1
   # equatable: ^2.0.5
 
   # google_fonts: ^3.0.1
